Create initial tab content structure

--- a/index.html
+++ b/index.html
@@ -43,6 +43,24 @@
                 </div>
             </div>
         </div>
+        <div class="tab-pane fade" id="nav-schedule" role="tabpanel" aria-labelledby="nav-schedule-tab">
+            <p>Schedule</p>
+        </div>
+        <div class="tab-pane fade" id="nav-registry" role="tabpanel" aria-labelledby="nav-registry-tab">
+            <p>Registry</p>
+        </div>
+        <div class="tab-pane fade" id="nav-wedding-party" role="tabpanel" aria-labelledby="nav-wedding-party-tab">
+            <p>Wedding party</p>
+        </div>
+        <div class="tab-pane fade" id="nav-photos" role="tabpanel" aria-labelledby="nav-photos-tab">
+            <p>photos</p>
+        </div>
+        <div class="tab-pane fade" id="nav-questions" role="tabpanel" aria-labelledby="nav-questions-tab">
+            <p>questions</p>
+        </div>
+        <div class="tab-pane fade" id="nav-rsvp" role="tabpanel" aria-labelledby="nav-rsvp-tab">
+            <p>rsvp</p>
+        </div>
     </div>
 </body>
 </html>
