--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mitchell Francisco</title>
+    <title>Janine Ikeda & Mitchell Francisco Wedding</title>
     <!-- Latest compiled and minified CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -44,22 +44,47 @@
             </div>
         </div>
         <div class="tab-pane fade" id="nav-schedule" role="tabpanel" aria-labelledby="nav-schedule-tab">
-            <p>Schedule</p>
+            <div class="container text-center">
+                <h1>Schedule</h1>
+                <div class="row">
+                    <div class="col-3"></div>
+                    <div class="col-3 text-capitalize">
+                        <h2>Wedding</h2>
+                        <p>Saturday, July 8th, 2023</p>
+                        <p>4PM to 10:30PM</p>
+                    </div>
+                    <div class="col-3">
+                        <p>Craven Farm</p>
+                        <p>13817 Short School Rd<br>Snohomish, WA 98290</p>
+                    </div>
+                    <div class="col-3"></div>
+                </div>
+            </div>
         </div>
         <div class="tab-pane fade" id="nav-registry" role="tabpanel" aria-labelledby="nav-registry-tab">
-            <p>Registry</p>
+            <div class="container text-center">
+                <h1>Registry</h1>
+            </div>
         </div>
         <div class="tab-pane fade" id="nav-wedding-party" role="tabpanel" aria-labelledby="nav-wedding-party-tab">
-            <p>Wedding party</p>
+            <div class="container text-center">
+                <h1>Wedding Party</h1>
+            </div>
         </div>
         <div class="tab-pane fade" id="nav-photos" role="tabpanel" aria-labelledby="nav-photos-tab">
-            <p>photos</p>
+            <div class="container text-center">
+                <h1>Photos</h1>
+            </div>
         </div>
         <div class="tab-pane fade" id="nav-questions" role="tabpanel" aria-labelledby="nav-questions-tab">
-            <p>questions</p>
+            <div class="container text-center">
+                <h1>Questions</h1>
+            </div>
         </div>
         <div class="tab-pane fade" id="nav-rsvp" role="tabpanel" aria-labelledby="nav-rsvp-tab">
-            <p>rsvp</p>
+            <div class="container text-center">
+                <h1>RSVP</h1>
+            </div>
         </div>
     </div>
 </body>
