Create initial wedding party skeleton

--- a/index.html
+++ b/index.html
@@ -69,6 +69,81 @@
         <div class="tab-pane fade" id="nav-wedding-party" role="tabpanel" aria-labelledby="nav-wedding-party-tab">
             <div class="container text-center">
                 <h1>Wedding Party</h1>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-1"></div>
+                        <div class="col-4">
+                            <img class="img-fluid rounded-circle" src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.6435-9/34031901_10209138355934373_7947320747653857280_n.jpg?_nc_cat=107&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=OEuz_q5E38cAX-4Sm4Q&_nc_ht=scontent-sea1-1.xx&oh=00_AT8Hb5DY_hXXvGEUmZI9od5_nfFfCJ7SrF28fZXD-4-yaw&oe=62969C7F">
+                        </div>
+                        <div class="col-6">
+                            <h1>Jessy Hosken</h1>
+                            <h2>Maid of Honor</h2>
+                            <p>Megan and I met during summer school after our freshman year at UCLA — we hit it off and wound up rooming together during junior and senior year. After graduation, we packed up our apartment for San Francisco. We had both gotten our first (grown-up!) jobs in the city and found an apartment together in the Inner Richmond. Our Monday night tradition was pretty much my most favorite thing, ever: pizza from Giorgio’s and the newest episode of The Bachelor.</p>
+                        </div>
+                        <div class="col-1"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-1"></div>
+                        <div class="col-4">
+                            <img class="img-fluid rounded-circle" src="https://s3.amazonaws.com/uploads.hitchedup.com/attendant_demo_photos/HaleyClarke.jpg">
+                        </div>
+                        <div class="col-6">
+                            <h1>Angelita Hernandez</h1>
+                            <h2>Bridesmaid</h2>
+                            <p>Megan and I met during summer school after our freshman year at UCLA — we hit it off and wound up rooming together during junior and senior year. After graduation, we packed up our apartment for San Francisco. We had both gotten our first (grown-up!) jobs in the city and found an apartment together in the Inner Richmond. Our Monday night tradition was pretty much my most favorite thing, ever: pizza from Giorgio’s and the newest episode of The Bachelor.</p>
+                        </div>
+                        <div class="col-1"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-1"></div>
+                        <div class="col-4">
+                            <img class="img-fluid rounded-circle" src="https://s3.amazonaws.com/uploads.hitchedup.com/attendant_demo_photos/DianaHuang.jpg">
+                        </div>
+                        <div class="col-6">
+                            <h1>Jonathan Ieng</h1>
+                            <h2>Bridesman</h2>
+                            <p>Megan and I met during summer school after our freshman year at UCLA — we hit it off and wound up rooming together during junior and senior year. After graduation, we packed up our apartment for San Francisco. We had both gotten our first (grown-up!) jobs in the city and found an apartment together in the Inner Richmond. Our Monday night tradition was pretty much my most favorite thing, ever: pizza from Giorgio’s and the newest episode of The Bachelor.</p>
+                        </div>
+                        <div class="col-1"></div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-1"></div>
+                        <div class="col-6">
+                            <h1>Matthew Francisco</h1>
+                            <h2>Best Man</h2>
+                            <p>Chris is my older and only brother—he has always been like a father figure to me. He owns and operates an awesome ski shop on Lake Tahoe with his wife Jenny (they’re expecting their first baby later this year!). Every summer, we do a week-long camping trip in the woods that we look forward to all year.</p>
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid rounded-circle" src="https://s3.amazonaws.com/uploads.hitchedup.com/attendant_demo_photos/ChrisMassey.jpg">
+                        </div>
+                        <div class="col-1"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-1"></div>
+                        <div class="col-6">
+                            <h1>x y</h1>
+                            <h2>Groomsman</h2>
+                            <p>Chris is my older and only brother—he has always been like a father figure to me. He owns and operates an awesome ski shop on Lake Tahoe with his wife Jenny (they’re expecting their first baby later this year!). Every summer, we do a week-long camping trip in the woods that we look forward to all year.</p>
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid rounded-circle" src="https://s3.amazonaws.com/uploads.hitchedup.com/attendant_demo_photos/MatthewCraft.jpg">
+                        </div>
+                        <div class="col-1"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-1"></div>
+                        <div class="col-6">
+                            <h1>x y</h1>
+                            <h2>Groomsman</h2>
+                            <p>Chris is my older and only brother—he has always been like a father figure to me. He owns and operates an awesome ski shop on Lake Tahoe with his wife Jenny (they’re expecting their first baby later this year!). Every summer, we do a week-long camping trip in the woods that we look forward to all year.</p>
+                        </div>
+                        <div class="col-4">
+                            <img class="img-fluid rounded-circle" src="https://s3.amazonaws.com/uploads.hitchedup.com/attendant_demo_photos/BenjaminHolland.jpg">
+                        </div>
+                        <div class="col-1"></div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="tab-pane fade" id="nav-photos" role="tabpanel" aria-labelledby="nav-photos-tab">
