--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <img class="mw-100" src="/images/home-header-1.png">
-    <h1 class="text-center mt-3">Janine & Mitchell</h1>
+    <h1 class="heading-primary text-center mt-3">Janine & Mitchell</h1>
     <nav>
         <div class="nav nav-tabs pt-0" id="nav-tab" role="tablist">
             <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Home</a>
@@ -41,6 +41,62 @@
                     <span class="mt-4">and</span>
                     <div class="col-3 h1">Mitchell Francisco</div>
                     <div class="col-3"></div>
+                </div>
+                <div class="row">
+                    <div class="card w-100 text-center">
+                        <div class="card-header">
+                            First meeting
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">University of Washington</h5>
+                            <p class="card-text">Janine and Mitchell met during the first quarter of their freshman year at the University of Washington in an introductory astronomy class. They began getting together for study sessions, which quickly turned into weekend hang outs and even a first date to Tofu House – which, to this day, is still their favorite Korean restaurant.</p>
+                        </div>
+                        <div class="card-footer text-muted">
+                            Fall 2014
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="card w-100 text-center">
+                        <div class="card-header">
+                            Dating Begins
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Dating and Waiting</h5>
+                            <p class="card-text">Janine and Mitchell met during the first quarter of their freshman year at the University of Washington in an introductory astronomy class. They began getting together for study sessions, which quickly turned into weekend hang outs and even a first date to Tofu House – which, to this day, is still their favorite Korean restaurant.</p>
+                        </div>
+                        <div class="card-footer text-muted">
+                            April 18th, 2015
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="card w-100 text-center">
+                        <div class="card-header">
+                            A Long Distance Relationship
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Akita, Japan</h5>
+                            <p class="card-text">With Mitchell’s support, four years into the relationship, Janine left to live in Japan and fulfill her lifelong ambition of teaching English. The two went into a long-distance relationship for a year and managed to keep their relationship strong through thousands of Discord messages, numerous weekend phone calls despite the 16-hour time difference, and one week-long vacation for Mitchell to visit. The time apart was not easy, but it allowed them to grow, as individuals and as a couple, even more.</p>
+                        </div>
+                        <div class="card-footer text-muted">
+                            July 2018 - July 2019
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="card w-100 text-center">
+                        <div class="card-header">
+                            Engaged
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title"></h5>
+                            <p class="card-text">On a gorgeous and sunny February afternoon in Magnuson Park, Mitchell found a quiet place on the water to pop the question. … And they ended the date with a classic: a trip to Tofu House. </p>
+                        </div>
+                        <div class="card-footer text-muted">
+                            July 2018 - July 2019
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
