More work on schedule tab

--- a/index.html
+++ b/index.html
@@ -103,10 +103,50 @@
         <div class="tab-pane fade" id="nav-schedule" role="tabpanel" aria-labelledby="nav-schedule-tab">
             <div class="container text-center">
                 <h1>Schedule</h1>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10705.387196100939!2d-122.0751266!3d47.8716125!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1c51c954ea3f5599!2sCraven%20Farm!5e0!3m2!1sen!2sus!4v1652152180307!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <div class="row">
                     <div class="col-3"></div>
-                    <div class="col-3 text-capitalize">
+                    <div class="col-3 text-capitalize border-right">
                         <h2>Wedding</h2>
+                        <p>Saturday, July 8th, 2023</p>
+                        <p>4PM to 10:30PM</p>
+                    </div>
+                    <div class="col-3">
+                        <p>Craven Farm</p>
+                        <p>13817 Short School Rd<br>Snohomish, WA 98290</p>
+                    </div>
+                    <div class="col-3"></div>
+                </div>
+                <div class="row">
+                    <div class="col-3"></div>
+                    <div class="col-3 text-capitalize border-right">
+                        <h2>Our Ceremony</h2>
+                        <p>Saturday, July 8th, 2023</p>
+                        <p>4PM to 10:30PM</p>
+                    </div>
+                    <div class="col-3">
+                        <p>Craven Farm</p>
+                        <p>13817 Short School Rd<br>Snohomish, WA 98290</p>
+                    </div>
+                    <div class="col-3"></div>
+                </div>
+                <div class="row">
+                    <div class="col-3"></div>
+                    <div class="col-3 text-capitalize border-right">
+                        <h2>Cocktail Hour</h2>
+                        <p>Saturday, July 8th, 2023</p>
+                        <p>4PM to 10:30PM</p>
+                    </div>
+                    <div class="col-3">
+                        <p>Craven Farm</p>
+                        <p>13817 Short School Rd<br>Snohomish, WA 98290</p>
+                    </div>
+                    <div class="col-3"></div>
+                </div>
+                <div class="row">
+                    <div class="col-3"></div>
+                    <div class="col-3 text-capitalize border-right">
+                        <h2>Reception</h2>
                         <p>Saturday, July 8th, 2023</p>
                         <p>4PM to 10:30PM</p>
                     </div>
