Update schedule tab

--- a/index.html
+++ b/index.html
@@ -103,58 +103,50 @@
         <div class="tab-pane fade" id="nav-schedule" role="tabpanel" aria-labelledby="nav-schedule-tab">
             <div class="container text-center">
                 <h1>Schedule</h1>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10705.387196100939!2d-122.0751266!3d47.8716125!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1c51c954ea3f5599!2sCraven%20Farm!5e0!3m2!1sen!2sus!4v1652152180307!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <img width="250px" src="/images/flower-boquet-transparent.png">
+                <br>
                 <div class="row">
-                    <div class="col-3"></div>
-                    <div class="col-3 text-capitalize border-right">
-                        <h2>Wedding</h2>
+                    <div class="col-1"></div>
+                    <div class="col-5">
+                        <img class="img-fluid" src="/images/craven-farm-2.jpg">
+                        <p class="h3">Wedding Ceremony + Reception</p>
+                        <p>Craven Farm<br>13817 Short School Rd<br>Snohomish, WA 98290</p>
+                    </div>
+                    <div class="col-5">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10705.387196100939!2d-122.0751266!3d47.8716125!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x1c51c954ea3f5599!2sCraven%20Farm!5e0!3m2!1sen!2sus!4v1652152180307!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col">
+                        <p class="h1">Wedding</p>
                         <p>Saturday, July 8th, 2023</p>
-                        <p>4PM to 10:30PM</p>
+                        <p>4:00PM - 10:00PM</p>
                     </div>
-                    <div class="col-3">
-                        <p>Craven Farm</p>
-                        <p>13817 Short School Rd<br>Snohomish, WA 98290</p>
-                    </div>
-                    <div class="col-3"></div>
                 </div>
                 <div class="row">
-                    <div class="col-3"></div>
-                    <div class="col-3 text-capitalize border-right">
-                        <h2>Our Ceremony</h2>
-                        <p>Saturday, July 8th, 2023</p>
-                        <p>4PM to 10:30PM</p>
+                    <div class="col">
+                        <img width="200px" src="/images/heart-icon.png">
+                        <p class="h1">Ceremony</p>
+                        <p>4:00 - 4:30PM</p>
                     </div>
-                    <div class="col-3">
-                        <p>Craven Farm</p>
-                        <p>13817 Short School Rd<br>Snohomish, WA 98290</p>
-                    </div>
-                    <div class="col-3"></div>
                 </div>
                 <div class="row">
-                    <div class="col-3"></div>
-                    <div class="col-3 text-capitalize border-right">
-                        <h2>Cocktail Hour</h2>
-                        <p>Saturday, July 8th, 2023</p>
-                        <p>4PM to 10:30PM</p>
+                    <div class="col">
+                        <img width="200px" src="/images/wine-icon.png">
+                        <p class="h1">Cocktail Hour</p>
+                        <p>4:30PM - 6:00PM</p>
+                        <p>Grazing tables + cocktails</p>
                     </div>
-                    <div class="col-3">
-                        <p>Craven Farm</p>
-                        <p>13817 Short School Rd<br>Snohomish, WA 98290</p>
-                    </div>
-                    <div class="col-3"></div>
                 </div>
                 <div class="row">
-                    <div class="col-3"></div>
-                    <div class="col-3 text-capitalize border-right">
-                        <h2>Reception</h2>
-                        <p>Saturday, July 8th, 2023</p>
-                        <p>4PM to 10:30PM</p>
+                    <div class="col">
+                        <img width="200px" src="/images/cake-icon.png">
+                        <p class="h1">Reception</p>
+                        <p>6:00PM - 10:00PM</p>
+                        <p>Dinner, dancing, music, games, and dessert!</p>
                     </div>
-                    <div class="col-3">
-                        <p>Craven Farm</p>
-                        <p>13817 Short School Rd<br>Snohomish, WA 98290</p>
-                    </div>
-                    <div class="col-3"></div>
                 </div>
             </div>
         </div>
