--- a/index.html
+++ b/index.html
@@ -239,6 +239,51 @@
         <div class="tab-pane fade" id="nav-photos" role="tabpanel" aria-labelledby="nav-photos-tab">
             <div class="container text-center">
                 <h1>Photos</h1>
+                <div class="row">
+                    <div class="col">
+                        <a data-fslightbox href="/images/images-tab/1.jpg">
+                            <img class="img-fluid my-4" src="/images/images-tab/1.jpg">
+                        </a>
+                        <a data-fslightbox href="/images/images-tab/9.jpg">
+                            <img class="img-fluid my-4" src="/images/images-tab/9.jpg">
+                        </a>
+                        <a data-fslightbox href="/images/images-tab/7.jpg">
+                            <img class="img-fluid my-4" src="/images/images-tab/7.jpg">
+                        </a>
+                        <a data-fslightbox href="/images/images-tab/10.jpg">
+                            <img class="img-fluid my-4" src="/images/images-tab/10.jpg">
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a data-fslightbox href="/images/images-tab/2.jpg">
+                            <img class="img-fluid my-4" src="/images/images-tab/2.jpg">
+                        </a>
+                        <a data-fslightbox href="/images/images-tab/5.jpg">
+                            <img class="img-fluid my-4" src="/images/images-tab/5.jpg">
+                        </a>
+                        <a data-fslightbox href="/images/images-tab/8.jpg">
+                            <img class="img-fluid my-4" src="/images/images-tab/8.jpg">
+                        </a>
+                        <a data-fslightbox href="/images/images-tab/11.jpg">
+                            <img class="img-fluid my-4" src="/images/images-tab/11.jpg">
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a data-fslightbox href="/images/images-tab/3.jpg">
+                            <img class="img-fluid my-4" src="/images/images-tab/3.jpg">
+                        </a>
+                        <a data-fslightbox href="/images/images-tab/6.jpg">
+                            <img class="img-fluid my-4" src="/images/images-tab/6.jpg">
+                        </a>
+                        <a data-fslightbox href="/images/images-tab/4.jpg">
+                            <img class="img-fluid my-4" src="/images/images-tab/4.jpg">
+                        </a>
+                        <a data-fslightbox href="/images/images-tab/12.jpg">
+                            <img class="img-fluid my-4" src="/images/images-tab/12.jpg">
+                        </a>
+                    </div>
+                </div>
+
             </div>
         </div>
         <div class="tab-pane fade" id="nav-questions" role="tabpanel" aria-labelledby="nav-questions-tab">
@@ -252,5 +297,6 @@
             </div>
         </div>
     </div>
+    <script src="/scripts/fslightbox.js"></script> 
 </body>
 </html>
