--- a/index.html
+++ b/index.html
@@ -241,31 +241,31 @@
                 <h1>Photos</h1>
                 <div class="row">
                     <div class="col">
-                        <a data-fslightbox href="/images/images-tab/1.jpg">
-                            <img class="img-fluid my-4" src="/images/images-tab/1.jpg">
+                        <a data-fslightbox href="/images/images-tab/1.JPG">
+                            <img class="img-fluid my-4" src="/images/images-tab/1.JPG">
                         </a>
-                        <a data-fslightbox href="/images/images-tab/9.jpg">
-                            <img class="img-fluid my-4" src="/images/images-tab/9.jpg">
+                        <a data-fslightbox href="/images/images-tab/9.JPG">
+                            <img class="img-fluid my-4" src="/images/images-tab/9.JPG">
                         </a>
-                        <a data-fslightbox href="/images/images-tab/7.jpg">
-                            <img class="img-fluid my-4" src="/images/images-tab/7.jpg">
+                        <a data-fslightbox href="/images/images-tab/7.JPG">
+                            <img class="img-fluid my-4" src="/images/images-tab/7.JPG">
                         </a>
-                        <a data-fslightbox href="/images/images-tab/10.jpg">
-                            <img class="img-fluid my-4" src="/images/images-tab/10.jpg">
+                        <a data-fslightbox href="/images/images-tab/10.JPG">
+                            <img class="img-fluid my-4" src="/images/images-tab/10.JPG">
                         </a>
                     </div>
                     <div class="col">
-                        <a data-fslightbox href="/images/images-tab/2.jpg">
-                            <img class="img-fluid my-4" src="/images/images-tab/2.jpg">
+                        <a data-fslightbox href="/images/images-tab/2.JPG">
+                            <img class="img-fluid my-4" src="/images/images-tab/2.JPG">
                         </a>
                         <a data-fslightbox href="/images/images-tab/5.jpg">
                             <img class="img-fluid my-4" src="/images/images-tab/5.jpg">
                         </a>
-                        <a data-fslightbox href="/images/images-tab/8.jpg">
-                            <img class="img-fluid my-4" src="/images/images-tab/8.jpg">
+                        <a data-fslightbox href="/images/images-tab/8.JPG">
+                            <img class="img-fluid my-4" src="/images/images-tab/8.JPG">
                         </a>
-                        <a data-fslightbox href="/images/images-tab/11.jpg">
-                            <img class="img-fluid my-4" src="/images/images-tab/11.jpg">
+                        <a data-fslightbox href="/images/images-tab/11.JPG">
+                            <img class="img-fluid my-4" src="/images/images-tab/11.JPG">
                         </a>
                     </div>
                     <div class="col">
@@ -278,8 +278,8 @@
                         <a data-fslightbox href="/images/images-tab/4.jpg">
                             <img class="img-fluid my-4" src="/images/images-tab/4.jpg">
                         </a>
-                        <a data-fslightbox href="/images/images-tab/12.jpg">
-                            <img class="img-fluid my-4" src="/images/images-tab/12.jpg">
+                        <a data-fslightbox href="/images/images-tab/12.JPG">
+                            <img class="img-fluid my-4" src="/images/images-tab/12.JPG">
                         </a>
                     </div>
                 </div>
