--- a/index.html
+++ b/index.html
@@ -34,68 +34,31 @@
     <div class="tab-content">
         <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
             <img class="mw-100" src="/images/banner.jpg">
-            <div class="container">
-                <div class="row text-center">
-                    <div class="col-3"></div>
-                    <div class="col-3 h1">Janine<br>Ikeda</div>
-                    <span class="mt-4">and</span>
-                    <div class="col-3 h1">Mitchell Francisco</div>
-                    <div class="col-3"></div>
+            <h2 class="heading-secondary text-center mt-3">Our Story</h2>
+            <div class="timeline">
+                <div class="timeline-container left">
+                  <div class="content">
+                    <h2>Fall 2014 - First Met</h2>
+                    <p>Janine and Mitchell met during the first quarter of their freshman year at the University of Washington in an introductory astronomy class. They began getting together for study sessions, which quickly turned into weekend hang outs and even a first date to Tofu House – which, to this day, is still their favorite Korean restaurant.</p>
+                  </div>
                 </div>
-                <div class="row">
-                    <div class="card w-100 text-center">
-                        <div class="card-header">
-                            First meeting
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">University of Washington</h5>
-                            <p class="card-text">Janine and Mitchell met during the first quarter of their freshman year at the University of Washington in an introductory astronomy class. They began getting together for study sessions, which quickly turned into weekend hang outs and even a first date to Tofu House – which, to this day, is still their favorite Korean restaurant.</p>
-                        </div>
-                        <div class="card-footer text-muted">
-                            Fall 2014
-                        </div>
-                    </div>
+                <div class="timeline-container right">
+                  <div class="content">
+                    <h2>2016</h2>
+                    <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+                  </div>
                 </div>
-                <div class="row">
-                    <div class="card w-100 text-center">
-                        <div class="card-header">
-                            Dating Begins
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Dating and Waiting</h5>
-                            <p class="card-text">Janine and Mitchell met during the first quarter of their freshman year at the University of Washington in an introductory astronomy class. They began getting together for study sessions, which quickly turned into weekend hang outs and even a first date to Tofu House – which, to this day, is still their favorite Korean restaurant.</p>
-                        </div>
-                        <div class="card-footer text-muted">
-                            April 18th, 2015
-                        </div>
-                    </div>
+                <div class="timeline-container left">
+                  <div class="content">
+                    <h2>July 2018 – July 2019</h2>
+                    <p>With Mitchell’s support, four years into the relationship, Janine left to live in Japan and fulfill her lifelong ambition of teaching English. The two went into a long-distance relationship for a year and managed to keep their relationship strong through thousands of Discord messages, numerous weekend phone calls despite the 16-hour time difference, and one week-long vacation for Mitchell to visit. The time apart was not easy, but it allowed them to grow, as individuals and as a couple, even more.
+                    </p>
+                  </div>
                 </div>
-                <div class="row">
-                    <div class="card w-100 text-center">
-                        <div class="card-header">
-                            A Long Distance Relationship
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Akita, Japan</h5>
-                            <p class="card-text">With Mitchell’s support, four years into the relationship, Janine left to live in Japan and fulfill her lifelong ambition of teaching English. The two went into a long-distance relationship for a year and managed to keep their relationship strong through thousands of Discord messages, numerous weekend phone calls despite the 16-hour time difference, and one week-long vacation for Mitchell to visit. The time apart was not easy, but it allowed them to grow, as individuals and as a couple, even more.</p>
-                        </div>
-                        <div class="card-footer text-muted">
-                            July 2018 - July 2019
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="card w-100 text-center">
-                        <div class="card-header">
-                            Engaged
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title"></h5>
-                            <p class="card-text">On a gorgeous and sunny February afternoon in Magnuson Park, Mitchell found a quiet place on the water to pop the question. … And they ended the date with a classic: a trip to Tofu House. </p>
-                        </div>
-                        <div class="card-footer text-muted">
-                            July 2018 - July 2019
-                        </div>
+                <div class="timeline-container right">
+                    <div class="content">
+                      <h2>February 12, 2022 – Engaged </h2>
+                      <p>On a gorgeous and sunny February afternoon in Magnuson Park, Mitchell found a quiet place on the water to pop the question. … And they ended the date with a classic: a trip to Tofu House. .</p>
                     </div>
                 </div>
             </div>
