Initial rsvp work

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <body>
     <img class="mw-100" src="/images/home-header-1.png">
     <h1 class="heading-primary text-center mt-3">Janine & Mitchell</h1>
+    <h2 class="text-center">July 8th, 2023</h2>
     <nav>
         <div class="nav nav-tabs pt-0" id="nav-tab" role="tablist">
             <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Home</a>
@@ -260,6 +261,7 @@
             </div>
         </div>
     </div>
-    <script src="/scripts/fslightbox.js"></script> 
+    <script src="/scripts/fslightbox.js"></script>
+    <script type="module" src="/scripts/rsvp.js"></script>
 </body>
 </html>
