Update title fonts per tab

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
         <div class="tab-pane fade" id="nav-schedule" role="tabpanel" aria-labelledby="nav-schedule-tab">
             <div class="container text-center">
-                <h1>Schedule</h1>
+                <h1 class="heading-secondary">Schedule</h1>
                 <img width="250px" src="/images/flower-boquet-transparent.png">
                 <br>
                 <div class="row">
@@ -116,12 +116,12 @@
         </div>
         <div class="tab-pane fade" id="nav-registry" role="tabpanel" aria-labelledby="nav-registry-tab">
             <div class="container text-center">
-                <h1>Registry</h1>
+                <h1 class="heading-secondary">Registry</h1>
             </div>
         </div>
         <div class="tab-pane fade" id="nav-wedding-party" role="tabpanel" aria-labelledby="nav-wedding-party-tab">
             <div class="container text-center">
-                <h1>Wedding Party</h1>
+                <h1 class="heading-secondary">Wedding Party</h1>
                 <img width="250px" src="/images/flower-boquet-transparent.png">
                 <div class="container">
                     <div class="row">
@@ -202,7 +202,7 @@
         </div>
         <div class="tab-pane fade" id="nav-photos" role="tabpanel" aria-labelledby="nav-photos-tab">
             <div class="container text-center">
-                <h1>Photos</h1>
+                <h1 class="heading-secondary">Photos</h1>
                 <div class="row">
                     <div class="col">
                         <a data-fslightbox href="/images/images-tab/1.JPG">
@@ -252,12 +252,12 @@
         </div>
         <div class="tab-pane fade" id="nav-questions" role="tabpanel" aria-labelledby="nav-questions-tab">
             <div class="container text-center">
-                <h1>Questions</h1>
+                <h1 class="heading-secondary">Questions</h1>
             </div>
         </div>
         <div class="tab-pane fade" id="nav-rsvp" role="tabpanel" aria-labelledby="nav-rsvp-tab">
             <div class="container text-center">
-                <h1>RSVP</h1>
+                <h1 class="heading-secondary">RSVP</h1>
             </div>
         </div>
     </div>
