--- a/index.html
+++ b/index.html
@@ -258,6 +258,16 @@
         <div class="tab-pane fade" id="nav-rsvp" role="tabpanel" aria-labelledby="nav-rsvp-tab">
             <div class="container text-center">
                 <h1 class="heading-secondary">RSVP</h1>
+                <form class="form-inline centered">
+                    <div class="form-group mx-sm-3 mb-2">
+                      <label for="inputFirstName" class="sr-only">First name</label>
+                      <input type="name" class="form-control" id="firstName" placeholder="First Name">
+                      <label for="inputLastName" class="sr-only">Last name</label>
+                      <input type="name" class="form-control" id="lastName" placeholder="Last Name">
+                    </div>
+                    <button type="button" id="verify" class="btn btn-primary mb-2">Find Your Invitation</button>
+                </form>
+                <button type="button" id="submitRsvp" class="btn btn-primary mb-2 d-none">Submit</button>
             </div>
         </div>
     </div>
