Update text and jessy img

--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@
                     <div class="row">
                         <div class="col-1"></div>
                         <div class="col-4">
-                            <img class="img-fluid rounded-circle" src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.6435-9/34031901_10209138355934373_7947320747653857280_n.jpg?_nc_cat=107&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=OEuz_q5E38cAX-4Sm4Q&_nc_ht=scontent-sea1-1.xx&oh=00_AT8Hb5DY_hXXvGEUmZI9od5_nfFfCJ7SrF28fZXD-4-yaw&oe=62969C7F">
+                            <img class="img-fluid rounded-circle" src="images/wedding-party-tab/jessy.jpg">
                         </div>
                         <div class="col-6">
                             <h1>Jessy Hosken</h1>
                             <h2>Maid of Honor</h2>
-                            <p>Megan and I met during summer school after our freshman year at UCLA — we hit it off and wound up rooming together during junior and senior year. After graduation, we packed up our apartment for San Francisco. We had both gotten our first (grown-up!) jobs in the city and found an apartment together in the Inner Richmond. Our Monday night tradition was pretty much my most favorite thing, ever: pizza from Giorgio’s and the newest episode of The Bachelor.</p>
+                            <p>Jessy is my longtime – and by longtime, I mean about 20 years – friend from elementary school. Even though we weren’t always in the same class, we spent our recesses together, played on the same soccer team, and had numerous play dates and sleepovers throughout the years. We stayed close friends during junior high and high school and despite us going our separate ways in college, found ways to remain best friends. She is the one who has been with me almost since day one, and someone who I can always depend on to be there for me.</p>
                         </div>
                         <div class="col-1"></div>
                     </div>
@@ -144,7 +144,7 @@
                         <div class="col-6">
                             <h1>Angelita Hernandez</h1>
                             <h2>Bridesmaid</h2>
-                            <p>Megan and I met during summer school after our freshman year at UCLA — we hit it off and wound up rooming together during junior and senior year. After graduation, we packed up our apartment for San Francisco. We had both gotten our first (grown-up!) jobs in the city and found an apartment together in the Inner Richmond. Our Monday night tradition was pretty much my most favorite thing, ever: pizza from Giorgio’s and the newest episode of The Bachelor.</p>
+                            <p>I also met Angelita at the end of 8th grade along with Jonathan. Her bubbly personality and sense of humor made her - and still makes her - easy to get along with and fun to be around. She is the one responsible for dragging me into the world of K-pop in high school, which consumed my life for the next so many years. Now, she is my talented crafting and baking buddy who can literally make anything. I’m proud to call her one of my best friends and my bridesmaid!</p>
                         </div>
                         <div class="col-1"></div>
                     </div>
@@ -156,7 +156,7 @@
                         <div class="col-6">
                             <h1>Jonathan Ieng</h1>
                             <h2>Bridesman</h2>
-                            <p>Megan and I met during summer school after our freshman year at UCLA — we hit it off and wound up rooming together during junior and senior year. After graduation, we packed up our apartment for San Francisco. We had both gotten our first (grown-up!) jobs in the city and found an apartment together in the Inner Richmond. Our Monday night tradition was pretty much my most favorite thing, ever: pizza from Giorgio’s and the newest episode of The Bachelor.</p>
+                            <p>Jonathan and I met towards the end of 8th grade in junior high school, although we were, and continued to be “’I’ buddies,” as we were always next to each other whenever we lined up alphabetically by last name. During high school and college, we kept in touch and now he’s the guy who brings all the greatest board games to our hang out sessions. Although he may not be a traditional bridesmaid, I know he’ll be the best and most reliable bridesman. </p>
                         </div>
                         <div class="col-1"></div>
                     </div>
