--- a/index.html
+++ b/index.html
@@ -37,26 +37,26 @@
             <img class="mw-100" src="/images/banner.jpg">
             <h2 class="heading-secondary text-center mt-3">Our Story</h2>
             <div class="timeline">
-                <div class="timeline-container left">
+                <div class="timeline-container left reveal">
                   <div class="content">
                     <h2>Fall 2014 - First Met</h2>
                     <p>Janine and Mitchell met during the first quarter of their freshman year at the University of Washington in an introductory astronomy class. They began getting together for study sessions, which quickly turned into weekend hang outs and even a first date to Tofu House – which, to this day, is still their favorite Korean restaurant.</p>
                   </div>
                 </div>
-                <div class="timeline-container right">
+                <div class="timeline-container right reveal">
                   <div class="content">
                     <h2>April 18, 2015 - Started Dating</h2>
                     <p>After a few months of weekend hang outs, Janine and Mitchell started dating in spring quarter of their freshman year. Before going on their separate educational paths, the two tried to take some classes together and finally managed to get into the same film class. This meant they got to spend some time together during the weekdays as well, which was beneficial for both of them.</p>
                   </div>
                 </div>
-                <div class="timeline-container left">
+                <div class="timeline-container left reveal">
                   <div class="content">
                     <h2>July 2018 – July 2019 - Japan LDR</h2>
                     <p>With Mitchell’s support, four years into the relationship, Janine left to live in Japan and fulfill her lifelong ambition of teaching English. The two went into a long-distance relationship for a year and managed to keep their relationship strong through thousands of Discord messages, numerous weekend phone calls despite the 16-hour time difference, and one week-long vacation for Mitchell to visit. The time apart was not easy, but it allowed them to grow, as individuals and as a couple, even more.
                     </p>
                   </div>
                 </div>
-                <div class="timeline-container right">
+                <div class="timeline-container right reveal">
                     <div class="content">
                       <h2>February 12, 2022 – Engaged </h2>
                       <p>On a gorgeous and sunny February afternoon in Magnuson Park, Mitchell found a quiet place on the water to pop the question, and of course, Janine said yes. The date ended with a classic: a trip to Tofu House. After almost seven years of dating and over a year of engagement, the two will spend their lifetime together on July 8th, 2023.</p>
