--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@
         <div class="tab-pane fade" id="nav-rsvp" role="tabpanel" aria-labelledby="nav-rsvp-tab">
             <div class="container text-center">
                 <h1 class="heading-secondary">RSVP</h1>
+                <div class="alert alert-info d-none" role="alert"></div>
                 <form class="form-inline centered">
                     <div class="form-group mx-sm-3 mb-2">
                       <label for="inputFirstName" class="sr-only">First name</label>
