--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </nav>
     <div class="tab-content">
         <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-            <img class="mw-100" src="/images/banner.jpg">
+            <div class="jumbotron home-page-hero has-image"></div>
             <h2 class="heading-secondary text-center mt-3">Our Story</h2>
             <div class="timeline">
                 <div class="timeline-container left reveal">
